overflow corrected

--- a/style.css
+++ b/style.css
@@ -5,11 +5,6 @@
     font-size: 10px;
 }
 
-html {
-    margin: 0;
-    width: 100%;
-}
-
 body {
     font-size: 1.6rem;
     color: black;
@@ -128,6 +123,7 @@ header {
 
 .botao1Form:hover{
     background-color: rgb(228, 60, 60);
+    cursor: pointer;
 }
 
 .botao1Form:focus {
@@ -146,6 +142,7 @@ header {
 
 .botao2Form:hover {
     background-color: rgb(80, 76, 76);
+    cursor: pointer;
 }
 
 .botao2Form:focus {
@@ -180,8 +177,8 @@ header {
 }
 
 .imgCarne {
-    width: 40rem;
-    height: 30rem;
+    width: 30rem;
+    height: 25rem;
 }
 
 
@@ -215,13 +212,13 @@ header {
 }
 
 .carousel-control-next {
-    left: 138rem;
+    left: 155rem;
     width: 10rem;
 }
 
 .carousel-control-prev {
-    left: 10rem;
-    width: 10rem;
+    left: -10rem;
+    width: 15rem;
 }
 
 .carousel-control-next-icon {
@@ -241,6 +238,7 @@ header {
 .carousel-indicators {
     top: 55rem;
     z-index: 0;
+    cursor: pointer;
 }
 
 .carousel-indicators .active {
@@ -273,6 +271,9 @@ header {
     align-items: center;
     text-align: center;
     flex-direction: column;
+}
+.item {
+    width: 40rem;
 }
 
 
@@ -313,6 +314,10 @@ header {
     color: white;
 }
 
+.contatoImg {
+    margin-top: 3rem;
+}
+
 .formulario {
     position: relative;
     display: flex;
@@ -325,7 +330,16 @@ header {
 #inputNome, #inputEmail, #inputTelefone{
     width: 60rem;
     margin-bottom: 3rem;
+    background: white;
+    border: none;
+    border-radius: 5px;
 }
+
+#inputNome:focus, #inputEmail:focus, #inputTelefone:focus, #inputMensagem:focus {
+    outline: none;
+    border: 3px solid rgb(96, 168, 192);
+}
+
 
 #inputMensagem {
     width: 60rem;
@@ -333,6 +347,9 @@ header {
     height: 10rem;
     margin-top: 4rem;
     margin-bottom: 1.5rem;
+    background: white;
+    border: none;
+    border-radius: 5px;
 }
 
 .funcionamento {
@@ -392,8 +409,8 @@ footer {
 .rodape {
     margin-top: 15rem;
     display: flex;
-    width: 100%;
     justify-content: space-evenly;
+    width: 150rem;
 }
 
 .redesSociais {
@@ -402,6 +419,22 @@ footer {
 
 .redesSociais h2 {
     font-size: 2.5rem;
+}
+
+.preencherForm {
+    margin-bottom: 3rem;
+    background: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.preencherForm:focus {
+    outline: none;
+}
+
+.preencherForm:hover {
+    background: rgb(246, 246, 246);
 }
 /* Footer Fim */
 
@@ -433,7 +466,7 @@ footer {
     height: 2rem;
     border-radius: 50%;
     margin-right: 1rem;
-    background-color: rgb(122, 226, 57);
+    background-color: rgb(96, 168, 192);
 }
 
 .radio-container {
@@ -633,7 +666,7 @@ footer {
 }
 
 .checkbox.selected {
-    background-color: rgb(122, 226, 57);
+    background-color: rgb(96, 168, 192);
     border: 2px solid white;
 }
 
@@ -660,10 +693,22 @@ footer {
     display: block;
 }
 
+.display-none {
+    display: none;
+}
+
 .botaoEnviar {
     margin-top: 1rem;
-    width: 6rem;
+    width: 8rem;
+    height: 3rem;
     margin-bottom: 2rem;
+    background: white;
+    border: none;
+    border-radius: 5px;
+}
+
+.botaoEnviar:hover{
+    cursor: pointer;
 }
 
 /* Checkbox css fim */
